updating localized files
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5061 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/About.fr.resx
+++ b/ifolder/src/FormsTrayApp/About.fr.resx
@@ -807,7 +807,7 @@
 	</data>
   
 	<data name="$this.Text">
-		<value>À propos de iFolder...</value>
+		<value>À propos de iFolder</value>
 	</data>
   
 	<data name="&gt;&gt;$this.Name">
