--- a/ifolder/src/FormsTrayApp/Credits.hu.resx
+++ b/ifolder/src/FormsTrayApp/Credits.hu.resx
@@ -163,7 +163,7 @@
 	</data>
   
 	<data name="listBox1.Items">
-		<value>			Az iFolder 3-csapat:</value>
+		<value>			Az iFolder 3-csapat</value>
 	</data>
   
 	<data name="listBox1.Items1">
@@ -279,7 +279,7 @@
 	</data>
   
 	<data name="listBox1.Items29">
-		<value>			Külön köszönet:</value>
+		<value>			Külön köszönet</value>
 	</data>
   
 	<data name="listBox1.Items30">
