--- a/ifolder/src/FormsTrayApp/Credits.it.resx
+++ b/ifolder/src/FormsTrayApp/Credits.it.resx
@@ -311,7 +311,7 @@
 	</data>
   
 	<data name="listBox1.Items37">
-		<value>&lt;1&gt; organizzazioni</value>
+		<value>Organizzazioni</value>
 	</data>
   
 	<data name="listBox1.Items38">
