--- a/ifolder/src/FormsTrayApp/Credits.ja.resx
+++ b/ifolder/src/FormsTrayApp/Credits.ja.resx
@@ -311,7 +311,7 @@
 	</data>
   
 	<data name="listBox1.Items37">
-		<value>&lt;1&gt; 組織</value>
+		<value>組織</value>
 	</data>
   
 	<data name="listBox1.Items38">
