--- a/ifolder/src/FormsTrayApp/GlobalProperties.zh-CN.resx
+++ b/ifolder/src/FormsTrayApp/GlobalProperties.zh-CN.resx
@@ -2507,11 +2507,11 @@
 	</data>
   
 	<data name="uploadFile">
-		<value> 正在上载文件</value>
+		<value>正在上载文件：{0}</value>
 	</data>
   
 	<data name="downloadFile">
-		<value>正在下载文件...</value>
+		<value>正在下载文件：{0}</value>
 	</data>
   
 	<data name="localFile">
@@ -2539,11 +2539,11 @@
 	</data>
   
 	<data name="deleteClientFile">
-		<value>正在删除文件</value>
+		<value>正在删除文件：{0}</value>
 	</data>
   
 	<data name="deleteClientDir">
-		<value>正在删除目录</value>
+		<value>正在删除目录：{0}</value>
 	</data>
   
 	<data name="deleteUnknown">
