--- a/ifolder/src/iFolderShell/MyMessageBox.it.resx
+++ b/ifolder/src/iFolderShell/MyMessageBox.it.resx
@@ -1043,6 +1043,6 @@
 	</data>
 	
 	<data name="hideDetails">
-		<value>(Nascondi dettagli)</value>
+		<value>Nascondi dettagli</value>
 	</data>
 </root>
