--- a/ifolder/src/FormsTrayApp/AdvancedSettings.de.resx
+++ b/ifolder/src/FormsTrayApp/AdvancedSettings.de.resx
@@ -579,7 +579,7 @@
 	</data>
   
 	<data name="label7.Text">
-		<value>An&amp;schluss</value>
+		<value>An&amp;schluss:</value>
 	</data>
   
 	<data name="label7.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
