--- a/ifolder/src/FormsTrayApp/Credits.de.resx
+++ b/ifolder/src/FormsTrayApp/Credits.de.resx
@@ -311,7 +311,7 @@
 	</data>
   
 	<data name="listBox1.Items37">
-		<value>&lt;1&gt; Organisationen</value>
+		<value>Organisationen</value>
 	</data>
   
 	<data name="listBox1.Items38">
