--- a/ifolder/src/FormsTrayApp/Credits.ru.resx
+++ b/ifolder/src/FormsTrayApp/Credits.ru.resx
@@ -287,7 +287,7 @@
 	</data>
   
 	<data name="listBox1.Items31">
-		<value>Содействовавшие лица:</value>
+		<value>Содействовавшие лица</value>
 	</data>
   
 	<data name="listBox1.Items32">
