--- a/ifolder/src/FormsTrayApp/Credits.zh-CN.resx
+++ b/ifolder/src/FormsTrayApp/Credits.zh-CN.resx
@@ -311,7 +311,7 @@
 	</data>
   
 	<data name="listBox1.Items37">
-		<value>&lt;1&gt; 组织</value>
+		<value>组织</value>
 	</data>
   
 	<data name="listBox1.Items38">
