--- a/ifolder/src/FormsTrayApp/GlobalProperties.de.resx
+++ b/ifolder/src/FormsTrayApp/GlobalProperties.de.resx
@@ -271,7 +271,7 @@
 	</data>
   
 	<data name="label1.Text">
-		<value>&amp;Server</value>
+		<value>&amp;Server:</value>
 	</data>
   
 	<data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -2507,11 +2507,11 @@
 	</data>
   
 	<data name="uploadFile">
-		<value>Datei wird heraufgeladen...</value>
+		<value>Datei wird heraufgeladen: {0}</value>
 	</data>
   
 	<data name="downloadFile">
-		<value>Datei wird heruntergeladen...</value>
+		<value>Datei wird heruntergeladen: {0}</value>
 	</data>
   
 	<data name="localFile">
@@ -2539,11 +2539,11 @@
 	</data>
   
 	<data name="deleteClientFile">
-		<value>Datei wird gelöscht</value>
+		<value>Datei wird gelöscht: {0}</value>
 	</data>
   
 	<data name="deleteClientDir">
-		<value>Verzeichnis wird gelöscht</value>
+		<value>Verzeichnis wird gelöscht: {0}</value>
 	</data>
   
 	<data name="deleteUnknown">
