--- a/ifolder/src/FormsTrayApp/GlobalProperties.it.resx
+++ b/ifolder/src/FormsTrayApp/GlobalProperties.it.resx
@@ -271,7 +271,7 @@
 	</data>
   
 	<data name="label1.Text">
-		<value>&amp;Server</value>
+		<value>&amp;Server:</value>
 	</data>
   
 	<data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -2507,11 +2507,11 @@
 	</data>
   
 	<data name="uploadFile">
-		<value> Caricamento del file in corso</value>
+		<value>Caricamento del file in corso: {0}</value>
 	</data>
   
 	<data name="downloadFile">
-		<value>Scaricamento del file in corso...</value>
+		<value>Scaricamento del file in corso: {0}</value>
 	</data>
   
 	<data name="localFile">
@@ -2539,11 +2539,11 @@
 	</data>
   
 	<data name="deleteClientFile">
-		<value>cancellazione del file\n</value>
+		<value>Cancellazione del file: {0}</value>
 	</data>
   
 	<data name="deleteClientDir">
-		<value>Cancellazione della directory</value>
+		<value>Cancellazione della directory: {0}</value>
 	</data>
   
 	<data name="deleteUnknown">
