--- a/ifolder/src/FormsTrayApp/GlobalProperties.ja.resx
+++ b/ifolder/src/FormsTrayApp/GlobalProperties.ja.resx
@@ -271,7 +271,7 @@
 	</data>
   
 	<data name="label1.Text">
-		<value>サーバ(&amp;S)</value>
+		<value>サーバ(&amp;S):</value>
 	</data>
   
 	<data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -2507,11 +2507,11 @@
 	</data>
   
 	<data name="uploadFile">
-		<value>ファイルをアップロードしています...</value>
+		<value>ファイルをアップロードしています: {0}</value>
 	</data>
   
 	<data name="downloadFile">
-		<value>ファイルをダウンロードしています...</value>
+		<value>ファイルをダウンロードしています: {0}</value>
 	</data>
   
 	<data name="localFile">
@@ -2539,11 +2539,11 @@
 	</data>
   
 	<data name="deleteClientFile">
-		<value>ファイルを削除中</value>
+		<value>ファイルを削除中: {0}</value>
 	</data>
   
 	<data name="deleteClientDir">
-		<value>ディレクトリを削除中</value>
+		<value>ディレクトリを削除中: {0}</value>
 	</data>
   
 	<data name="deleteUnknown">
