--- a/ifolder/src/FormsTrayApp/GlobalProperties.zh-TW.resx
+++ b/ifolder/src/FormsTrayApp/GlobalProperties.zh-TW.resx
@@ -2507,11 +2507,11 @@
 	</data>
   
 	<data name="uploadFile">
-		<value> 上載檔案中</value>
+		<value>上載檔案中: {0}</value>
 	</data>
   
 	<data name="downloadFile">
-		<value>正在下載檔案...</value>
+		<value>正在下載檔案： {0}</value>
 	</data>
   
 	<data name="localFile">
@@ -2539,11 +2539,11 @@
 	</data>
   
 	<data name="deleteClientFile">
-		<value>刪除檔案中\n</value>
+		<value>刪除檔案中: {0}</value>
 	</data>
   
 	<data name="deleteClientDir">
-		<value>刪除目錄中</value>
+		<value>刪除目錄中： {0}</value>
 	</data>
   
 	<data name="deleteUnknown">
