--- a/ifolder/src/FormsTrayApp/Preferences.de.resx
+++ b/ifolder/src/FormsTrayApp/Preferences.de.resx
@@ -2071,7 +2071,7 @@
 	</data>
   
 	<data name="columnHeader2.Text">
-		<value>Benutzername:</value>
+		<value>Benutzername</value>
 	</data>
   
 	<data name="columnHeader2.TextAlign" type="System.Windows.Forms.HorizontalAlignment, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -3163,7 +3163,7 @@
 	</data>
   
 	<data name="label5.Text">
-		<value>&amp;Server</value>
+		<value>&amp;Server:</value>
 	</data>
   
 	<data name="label5.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -4719,7 +4719,7 @@
 	</data>
   
 	<data name="statusLoggedOut">
-		<value>&lt;1&gt; :: &lt;2&gt; : Abgemeldet</value>
+		<value>Abgemeldet</value>
 	</data>
   
 	<data name="statusDisabled">
