--- a/ifolder/src/FormsTrayApp/Preferences.fr.resx
+++ b/ifolder/src/FormsTrayApp/Preferences.fr.resx
@@ -2071,7 +2071,7 @@
 	</data>
   
 	<data name="columnHeader2.Text">
-		<value>Nom d'utilisateur :</value>
+		<value>Nom d'utilisateur</value>
 	</data>
   
 	<data name="columnHeader2.TextAlign" type="System.Windows.Forms.HorizontalAlignment, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -4719,7 +4719,7 @@
 	</data>
   
 	<data name="statusLoggedOut">
-		<value>&lt;1&gt; :: &lt;2&gt; : Délogué</value>
+		<value>Délogué</value>
 	</data>
   
 	<data name="statusDisabled">
