--- a/ifolder/src/FormsTrayApp/Preferences.ja.resx
+++ b/ifolder/src/FormsTrayApp/Preferences.ja.resx
@@ -2071,7 +2071,7 @@
 	</data>
   
 	<data name="columnHeader2.Text">
-		<value>ユーザ名:</value>
+		<value>ユーザ名</value>
 	</data>
   
 	<data name="columnHeader2.TextAlign" type="System.Windows.Forms.HorizontalAlignment, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -3163,7 +3163,7 @@
 	</data>
   
 	<data name="label5.Text">
-		<value>サーバ(&amp;S)</value>
+		<value>サーバ(&amp;S):</value>
 	</data>
   
 	<data name="label5.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -4715,11 +4715,11 @@
 	</data>
   
 	<data name="statusLoggedIn">
-		<value> ログイン</value>
+		<value>ログイン</value>
 	</data>
   
 	<data name="statusLoggedOut">
-		<value>&lt;ログアウト済&gt;</value>
+		<value>ログアウト済</value>
 	</data>
   
 	<data name="statusDisabled">
