--- a/ifolder/src/FormsTrayApp/RemoveAccount.fr.resx
+++ b/ifolder/src/FormsTrayApp/RemoveAccount.fr.resx
@@ -363,7 +363,7 @@
 	</data>
   
 	<data name="label2.Text">
-		<value>Nom du système</value>
+		<value>Nom du système  : </value>
 	</data>
   
 	<data name="label2.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -463,7 +463,7 @@
 	</data>
   
 	<data name="label3.Text">
-		<value>Serveur</value>
+		<value>Serveur : </value>
 	</data>
   
 	<data name="label3.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
