--- a/ifolder/src/FormsTrayApp/ServerDetails.de.resx
+++ b/ifolder/src/FormsTrayApp/ServerDetails.de.resx
@@ -1159,7 +1159,7 @@
 	</data>
   
 	<data name="label13.Text">
-		<value>Quote</value>
+		<value>Quote:</value>
 	</data>
   
 	<data name="label13.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1259,7 +1259,7 @@
 	</data>
   
 	<data name="label12.Text">
-		<value>Belegt</value>
+		<value>Belegt:</value>
 	</data>
   
 	<data name="label12.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1359,7 +1359,7 @@
 	</data>
   
 	<data name="label11.Text">
-		<value>Verfügbar</value>
+		<value>Verfügbar:</value>
 	</data>
   
 	<data name="label11.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1775,7 +1775,7 @@
 	</data>
   
 	<data name="label1.Text">
-		<value>Systemname</value>
+		<value>Systemname:</value>
 	</data>
   
 	<data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
