--- a/ifolder/src/FormsTrayApp/ServerDetails.it.resx
+++ b/ifolder/src/FormsTrayApp/ServerDetails.it.resx
@@ -1159,7 +1159,7 @@
 	</data>
   
 	<data name="label13.Text">
-		<value>Quota</value>
+		<value>Quota:</value>
 	</data>
   
 	<data name="label13.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1259,7 +1259,7 @@
 	</data>
   
 	<data name="label12.Text">
-		<value>Usati</value>
+		<value>Usati:</value>
 	</data>
   
 	<data name="label12.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1359,7 +1359,7 @@
 	</data>
   
 	<data name="label11.Text">
-		<value>Disponibile</value>
+		<value>Disponibile:</value>
 	</data>
   
 	<data name="label11.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1775,7 +1775,7 @@
 	</data>
   
 	<data name="label1.Text">
-		<value>Nome sistema</value>
+		<value>Nome sistema:</value>
 	</data>
   
 	<data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
