--- a/ifolder/src/FormsTrayApp/ServerDetails.ja.resx
+++ b/ifolder/src/FormsTrayApp/ServerDetails.ja.resx
@@ -1159,7 +1159,7 @@
 	</data>
   
 	<data name="label13.Text">
-		<value>割り当て量</value>
+		<value>割り当て量:</value>
 	</data>
   
 	<data name="label13.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1259,7 +1259,7 @@
 	</data>
   
 	<data name="label12.Text">
-		<value>使用済み</value>
+		<value>使用済み:</value>
 	</data>
   
 	<data name="label12.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1359,7 +1359,7 @@
 	</data>
   
 	<data name="label11.Text">
-		<value>使用可能</value>
+		<value>使用可能:</value>
 	</data>
   
 	<data name="label11.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1775,7 +1775,7 @@
 	</data>
   
 	<data name="label1.Text">
-		<value>システム名</value>
+		<value>システム名:</value>
 	</data>
   
 	<data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
