--- a/ifolder/src/iFolderShell/ConflictResolver.de.resx
+++ b/ifolder/src/iFolderShell/ConflictResolver.de.resx
@@ -427,7 +427,7 @@
 	</data>
   
 	<data name="label3.Text">
-		<value>Standort</value>
+		<value>Standort:</value>
 	</data>
   
 	<data name="label3.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -4131,7 +4131,7 @@
 	</data>
   
 	<data name="openFileError">
-		<value>304: Öffnen der Datei {0} nicht möglich</value>
+		<value>Öffnen der Datei nicht möglich</value>
 	</data>
   
 	<data name="readOnlyTitle">
