--- a/ifolder/src/iFolderShell/ConflictResolver.fr.resx
+++ b/ifolder/src/iFolderShell/ConflictResolver.fr.resx
@@ -427,7 +427,7 @@
 	</data>
   
 	<data name="label3.Text">
-		<value>Emplacement</value>
+		<value>Emplacement :</value>
 	</data>
   
 	<data name="label3.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -4131,7 +4131,7 @@
 	</data>
   
 	<data name="openFileError">
-		<value>Impossible d'ouvrir le fichier. %s\n</value>
+		<value>Impossible d'ouvrir le fichier.</value>
 	</data>
   
 	<data name="readOnlyTitle">
