--- a/ifolder/src/iFolderShell/ConflictResolver.zh-TW.resx
+++ b/ifolder/src/iFolderShell/ConflictResolver.zh-TW.resx
@@ -307,7 +307,7 @@
 	</data>
   
 	<data name="label2.Text">
-		<value>姓名</value>
+		<value>姓名：</value>
 	</data>
   
 	<data name="label2.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -427,7 +427,7 @@
 	</data>
   
 	<data name="label3.Text">
-		<value>位置</value>
+		<value>位置：</value>
 	</data>
   
 	<data name="label3.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -1799,7 +1799,7 @@
 	</data>
   
 	<data name="label4.Text">
-		<value>姓名</value>
+		<value>姓名：</value>
 	</data>
   
 	<data name="label4.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -2759,7 +2759,7 @@
 	</data>
   
 	<data name="label12.Text">
-		<value>姓名</value>
+		<value>姓名：</value>
 	</data>
   
 	<data name="label12.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -3771,7 +3771,7 @@
 	</data>
   
 	<data name="label8.Text">
-		<value>姓名</value>
+		<value>姓名：</value>
 	</data>
   
 	<data name="label8.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
