--- a/ifolder/src/iFolderShell/CreateiFolder.ja.resx
+++ b/ifolder/src/iFolderShell/CreateiFolder.ja.resx
@@ -479,7 +479,7 @@
 	</data>
   
 	<data name="label1.Text">
-		<value>サーバ(&amp;S)</value>
+		<value>サーバ(&amp;S):</value>
 	</data>
   
 	<data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -691,7 +691,7 @@
 	</data>
   
 	<data name="label2.Text">
-		<value>場所</value>
+		<value>場所(&amp;L):</value>
 	</data>
   
 	<data name="label2.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
