--- a/ifolder/src/iFolderShell/CreateiFolder.zh-TW.resx
+++ b/ifolder/src/iFolderShell/CreateiFolder.zh-TW.resx
@@ -691,7 +691,7 @@
 	</data>
   
 	<data name="label2.Text">
-		<value>位置</value>
+		<value>位置(&amp;L)：</value>
 	</data>
   
 	<data name="label2.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
