--- a/ifolder/src/iFolderShell/NewiFolder.de.resx
+++ b/ifolder/src/iFolderShell/NewiFolder.de.resx
@@ -483,7 +483,7 @@
 	</data>
   
 	<data name="iFolderOverview.Text">
-		<value>Der ausgewählte Ordner ist nun ein iFolder-Ordner und unterscheidet sich durch das iFolder-Symbol von anderen Ordnern. Nähere Informationen zu iFolder und zur gemeinsamen Nutzung von iFolder-Ordnern mit anderen Benutzern finden Sie unter "Managing iFolders" in der iFolder-Hilfe.</value>
+		<value>Der ausgewählte Ordner ist nun ein iFolder-Ordner und unterscheidet sich durch das iFolder-Symbol von anderen Ordnern. Nähere Informationen zu iFolder und zur gemeinsamen Nutzung von iFolder-Ordnern mit anderen Benutzern finden Sie unter \"Managing iFolders\" in der iFolder-Hilfe.</value>
 	</data>
   
 	<data name="iFolderOverview.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
