--- a/ifolder/src/iFolderShell/Picker.ru.resx
+++ b/ifolder/src/iFolderShell/Picker.ru.resx
@@ -603,7 +603,7 @@
 	</data>
   
 	<data name="label1.Text">
-		<value>&amp;Поиск</value>
+		<value>&amp;Поиск:</value>
 	</data>
   
 	<data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
