--- a/ifolder/src/iFolderShell/iFolderAdvanced.de.resx
+++ b/ifolder/src/iFolderShell/iFolderAdvanced.de.resx
@@ -2631,7 +2631,7 @@
 	</data>
   
 	<data name="label9.Text">
-		<value>Verfügbar</value>
+		<value>Verfügbar:</value>
 	</data>
   
 	<data name="label9.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -2991,7 +2991,7 @@
 	</data>
   
 	<data name="label1.Text">
-		<value>Belegt</value>
+		<value>Belegt:</value>
 	</data>
   
 	<data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -3111,7 +3111,7 @@
 	</data>
   
 	<data name="limitLabel.Text">
-		<value>Quote</value>
+		<value>Quote:</value>
 	</data>
   
 	<data name="limitLabel.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -3231,7 +3231,7 @@
 	</data>
   
 	<data name="limit.Text">
-		<value>Bezeichnung</value>
+		<value>Bezeichnung4</value>
 	</data>
   
 	<data name="limit.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -5467,7 +5467,7 @@
 	</data>
   
 	<data name="iFolderProperties">
-		<value>iFolder-Eigenschaften für \"{0}\</value>
+		<value>iFolder-Eigenschaften für {0}</value>
 	</data>
   
 	<data name="iFolderOpenError">
@@ -5515,14 +5515,14 @@
 	</data>
   
 	<data name="minutes">
-		<value> Minute(n)</value>
+		<value>Minute(n)</value>
 	</data>
   
 	<data name="hours">
-		<value> Stunde(n)</value>
+		<value>Stunde(n)</value>
 	</data>
   
 	<data name="days">
-		<value> Tag(en)</value>
+		<value>Tag(en)</value>
 	</data>
 </root>
