--- a/ifolder/src/iFolderShell/iFolderAdvanced.fr.resx
+++ b/ifolder/src/iFolderShell/iFolderAdvanced.fr.resx
@@ -579,7 +579,7 @@
 	</data>
   
 	<data name="syncNow.Text">
-		<value>Synchroniser maintenant</value>
+		<value>Sy&amp;nchroniser maintenant</value>
 	</data>
   
 	<data name="syncNow.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -2631,7 +2631,7 @@
 	</data>
   
 	<data name="label9.Text">
-		<value>Disponible</value>
+		<value>Disponible :</value>
 	</data>
   
 	<data name="label9.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -2991,7 +2991,7 @@
 	</data>
   
 	<data name="label1.Text">
-		<value>Utilisé</value>
+		<value>Utilisé :</value>
 	</data>
   
 	<data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -3111,7 +3111,7 @@
 	</data>
   
 	<data name="limitLabel.Text">
-		<value>Quota</value>
+		<value>Quota :</value>
 	</data>
   
 	<data name="limitLabel.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -5523,6 +5523,6 @@
 	</data>
   
 	<data name="days">
-		<value> jour(s)</value>
+		<value>jour(s)</value>
 	</data>
 </root>
