--- a/ifolder/src/iFolderShell/iFolderAdvanced.it.resx
+++ b/ifolder/src/iFolderShell/iFolderAdvanced.it.resx
@@ -2631,7 +2631,7 @@
 	</data>
   
 	<data name="label9.Text">
-		<value>Disponibile</value>
+		<value>Disponibile:</value>
 	</data>
   
 	<data name="label9.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -2991,7 +2991,7 @@
 	</data>
   
 	<data name="label1.Text">
-		<value>Usati</value>
+		<value>Usati:</value>
 	</data>
   
 	<data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -3111,7 +3111,7 @@
 	</data>
   
 	<data name="limitLabel.Text">
-		<value>Quota</value>
+		<value>Quota:</value>
 	</data>
   
 	<data name="limitLabel.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -5519,7 +5519,7 @@
 	</data>
   
 	<data name="hours">
-		<value>%d1 ora(e)</value>
+		<value>ora(e)</value>
 	</data>
   
 	<data name="days">
