--- a/ifolder/src/iFolderShell/iFolderAdvanced.ru.resx
+++ b/ifolder/src/iFolderShell/iFolderAdvanced.ru.resx
@@ -2631,7 +2631,7 @@
 	</data>
   
 	<data name="label9.Text">
-		<value>Доступен</value>
+		<value>Доступен:</value>
 	</data>
   
 	<data name="label9.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -2991,7 +2991,7 @@
 	</data>
   
 	<data name="label1.Text">
-		<value>Используется</value>
+		<value>Используется:</value>
 	</data>
   
 	<data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -3111,7 +3111,7 @@
 	</data>
   
 	<data name="limitLabel.Text">
-		<value>Квота</value>
+		<value>Квота:</value>
 	</data>
   
 	<data name="limitLabel.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -5519,10 +5519,10 @@
 	</data>
   
 	<data name="hours">
-		<value>Часов:</value>
+		<value>часов</value>
 	</data>
   
 	<data name="days">
-		<value> дней</value>
+		<value>дней</value>
 	</data>
 </root>
