--- a/ifolder/src/iFolderShell/iFolderAdvanced.zh-TW.resx
+++ b/ifolder/src/iFolderShell/iFolderAdvanced.zh-TW.resx
@@ -2631,7 +2631,7 @@
 	</data>
   
 	<data name="label9.Text">
-		<value>可用的</value>
+		<value>可用的：</value>
 	</data>
   
 	<data name="label9.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -2991,7 +2991,7 @@
 	</data>
   
 	<data name="label1.Text">
-		<value>已使用</value>
+		<value>已使用：</value>
 	</data>
   
 	<data name="label1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -3111,7 +3111,7 @@
 	</data>
   
 	<data name="limitLabel.Text">
-		<value>配額</value>
+		<value>配額：</value>
 	</data>
   
 	<data name="limitLabel.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -4871,7 +4871,7 @@
 	</data>
   
 	<data name="ifolderLabel.Text">
-		<value>iFolder:</value>
+		<value>iFolder：</value>
 	</data>
   
 	<data name="ifolderLabel.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -5519,10 +5519,10 @@
 	</data>
   
 	<data name="hours">
-		<value>%d1 小時</value>
+		<value>小時</value>
 	</data>
   
 	<data name="days">
-		<value>%d1 日</value>
+		<value>日</value>
 	</data>
 </root>
